feat: Upgraded to Micronaut gradle plugin.